calico_versioned_docs/version-3.27/reference/resources/networkpolicy.mdx
---
description: API for this Calico resource.
---

import variables from '@site/calico_versioned_docs/version-3.27/variables';

# Network policy

import Httpmatch from '@site/calico_versioned_docs/version-3.27/_includes/content/_httpmatch.mdx';

import Servicematch from '@site/calico_versioned_docs/version-3.27/_includes/content/_servicematch.mdx';

import Serviceaccountmatch from '@site/calico_versioned_docs/version-3.27/_includes/content/_serviceaccountmatch.mdx';

import Ports from '@site/calico_versioned_docs/version-3.27/_includes/content/_ports.mdx';

import SelectorScopes from '@site/calico_versioned_docs/version-3.27/_includes/content/_selector-scopes.mdx';

import Selectors from '@site/calico_versioned_docs/version-3.27/_includes/content/_selectors.mdx';

import Entityrule from '@site/calico_versioned_docs/version-3.27/_includes/content/_entityrule.mdx';

import Icmp from '@site/calico_versioned_docs/version-3.27/_includes/content/_icmp.mdx';

import Rule from '@site/calico_versioned_docs/version-3.27/_includes/content/_rule.mdx';

A network policy resource (`NetworkPolicy`) represents an ordered set of rules which are applied
to a collection of endpoints that match a [label selector](#selectors).

`NetworkPolicy` is a namespaced resource. `NetworkPolicy` in a specific namespace
only applies to [workload endpoint resources](workloadendpoint.mdx)
in that namespace. Two resources are in the same namespace if the `namespace`
value is set the same on both.
See [global network policy resource](globalnetworkpolicy.mdx) for non-namespaced network policy.

`NetworkPolicy` resources can be used to define network connectivity rules between groups of {variables.prodname} endpoints and host endpoints, and
take precedence over [profile resources](profile.mdx) if any are defined.

## Sample YAML

This sample policy allows TCP traffic from `frontend` endpoints to port 6379 on
`database` endpoints.

```yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tcp-6379
  namespace: production
spec:
  selector: role == 'database'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      metadata:
        annotations:
          from: frontend
          to: database
      protocol: TCP
      source:
        selector: role == 'frontend'
      destination:
        ports:
          - 6379
  egress:
    - action: Allow
```

## Definition

### Metadata

| Field     | Description                                                        | Accepted Values                                     | Schema | Default   |
| --------- | ------------------------------------------------------------------ | --------------------------------------------------- | ------ | --------- |
| name      | The name of the network policy. Required.                          | Alphanumeric string with optional `.`, `_`, or `-`. | string |           |
| namespace | Namespace provides an additional qualification to a resource name. |                                                     | string | "default" |

### Spec

| Field                  | Description                                                                                                                                                                                                                          | Accepted Values           | Schema                 | Default                                       |
| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------- | ---------------------- | --------------------------------------------- |
| order                  | Controls the order of precedence. {variables.prodname} applies the policy with the lowest value first.                                                                                                                                       |                           | float                  |                                               |
| selector               | Selects the endpoints to which this policy applies.                                                                                                                                                                                  |                           | [selector](#selectors) | all()                                         |
| types                  | Applies the policy based on the direction of the traffic. To apply the policy to inbound traffic, set to `Ingress`. To apply the policy to outbound traffic, set to `Egress`. To apply the policy to both, set to `Ingress, Egress`. | `Ingress`, `Egress`       | List of strings        | Depends on presence of ingress/egress rules\* |
| ingress                | Ordered list of ingress rules applied by policy.                                                                                                                                                                                     |                           | List of [Rule](#rule)  |                                               |
| egress                 | Ordered list of egress rules applied by this policy.                                                                                                                                                                                 |                           | List of [Rule](#rule)  |                                               |
| serviceAccountSelector | Selects the service account(s) to which this policy applies. Select a specific service account by name using the `projectcalico.org/name` label.                                                                                     |                           | [selector](#selectors) | all()                                         |
| performanceHints       | Contains a list of hints to Calico's policy engine to help process the policy more efficiently.  Hints never change the enforcement behaviour of the policy.  The available hints are described [below](#performance-hints).                                                                         | `AssumeNeededOnEveryNode` | List of strings        |                                               |


\* If `types` has no value, {variables.prodname} defaults as follows.

> | Ingress Rules Present | Egress Rules Present | `Types` value     |
> | --------------------- | -------------------- | ----------------- |
> | No                    | No                   | `Ingress`         |
> | Yes                   | No                   | `Ingress`         |
> | No                    | Yes                  | `Egress`          |
> | Yes                   | Yes                  | `Ingress, Egress` |

### Rule

<Rule />

### ICMP

<Icmp />

### EntityRule

<Entityrule />

### Selectors

<Selectors />
<SelectorScopes />

### Ports

<Ports />

### ServiceAccountMatch

<Serviceaccountmatch />

### ServiceMatch

<Servicematch />

### Performance Hints

Performance hints provide a way to tell {variables.prodname} about the intended use of the policy so that it may
process it more efficiently.  Currently only one hint is defined:

* `AssumeNeededOnEveryNode`: normally, {variables.prodname} only calculates a policy's rules and selectors on nodes where
  the policy is actually in use (i.e. its selector matches a local endpoint).  This saves work in most cases.
  The `AssumeNeededOnEveryNode` hint tells {variables.prodname} to treat the policy as "in use" on *every* node.  This is
  useful for large policy sets that are known to apply to all (or nearly all) endpoints.  It effectively "preloads"
  the policy on every node so that there is less work to do when the first endpoint matching the policy shows up.
  It also prevents work from being done to tear down the policy when the last endpoint is drained.

## Application layer policy

Application layer policy is an optional feature of {variables.prodname} and
[must be enabled](../../network-policy/istio/app-layer-policy.mdx)
in order to use the following match criteria.

:::note

Application layer policy match criteria are supported with the following restrictions.

- Only ingress policy is supported. Egress policy must not contain any application layer policy match clauses.
- Rules must have the action `Allow` if they contain application layer policy match clauses.

:::

### HTTPMatch

<Httpmatch />

## Supported operations

| Datastore type           | Create/Delete | Update | Get/List | Notes |
| ------------------------ | ------------- | ------ | -------- | ----- |
| etcdv3                   | Yes           | Yes    | Yes      |
| Kubernetes API datastore | Yes           | Yes    | Yes      |
